fix(plugins): Draggable Grouping Toggle All should follow `collapsed` - prior to this PR fix, the "Toggle All" was always set to be expanded, but it should really be aware of knowing if the first group includes the `collapsed` boolean flag and follow it - also add extra styling around each group

--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -104,6 +104,8 @@ $slick-draggable-group-drop-border-top:                       0px !default;
 $slick-draggable-group-drop-width:                            100% !default;
 $slick-draggable-group-drop-radius:                           0px !default;
 $slick-draggable-group-delete-vertical-align:                 middle !default;
+$slick-draggable-group-toggle-all-icon-height:                $slick-icon-font-size !default;
+$slick-draggable-group-toggle-all-icon-width:                 $slick-icon-font-size !default;
 $slick-draggable-group-toggle-all-icon-vertical-align:        text-bottom !default;
 $slick-draggable-group-toggle-collapsed-icon:                 $slick-icon-group-collapsed !default;
 $slick-draggable-group-toggle-expanded-icon:                  $slick-icon-group-expanded !default;
